force-app/main/default/objects/DHS_Lead__c/fields/Explanation_of_search_results__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_search_results__c</fullName>
    <label>Explanation of search results</label>
    <length>10864</length>
    <type>LongTextArea</type>
</CustomField>