force-app/main/default/objects/DHS_Lead__c/fields/FAMILY_RELATIVES_AND_ASSOCIATES__c.field-meta.xml
<CustomField>
    <fullName>FAMILY_RELATIVES_AND_ASSOCIATES__c</fullName>
    <label>FAMILY, RELATIVES AND ASSOCIATES</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>