force-app/main/default/objects/DHS_Lead__c/fields/FINANCES__c.field-meta.xml
<CustomField>
    <fullName>FINANCES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FINANCES</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>