force-app/main/default/objects/DHS_Lead__c/fields/Flagged_Issue__c.field-meta.xml
<CustomField>
    <fullName>Flagged_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flagged Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>