force-app/main/default/objects/DHS_Lead__c/fields/Foreign_citizenship_country__c.field-meta.xml
<CustomField>
    <fullName>Foreign_citizenship_country__c</fullName>
    <label>Foreign citizenship country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>