force-app/main/default/objects/DHS_Lead__c/fields/FOREIGN_CONTACTS__c.field-meta.xml
<CustomField>
    <fullName>FOREIGN_CONTACTS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FOREIGN CONTACTS</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>