force-app/main/default/objects/DHS_Lead__c/fields/Frequency_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Contact__c</fullName>
    <label>Frequency of Contact</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>