force-app/main/default/objects/DHS_Lead__c/fields/Gen_Ref_Assoc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gen_Ref_Assoc_Notes__c</fullName>
    <label>General Reference Association Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>