force-app/main/default/objects/DHS_Lead__c/fields/Gen_Template_Record_Type_Nts__c.field-meta.xml
<CustomField>
    <fullName>Gen_Template_Record_Type_Nts__c</fullName>
    <label>General Template Record Type Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>