force-app/main/default/objects/DHS_Lead__c/fields/General_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>General_Record_Type__c</fullName>
    <label>General Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Discipline</fullName>
            </value>
            <value>
                <fullName>Bursar&apos;s office</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Campus Security/Police</fullName>
            </value>
            <value>
                <fullName>Military Record</fullName>
            </value>
            <value>
                <fullName>Official Personnel Folder (OPF)</fullName>
            </value>
            <value>
                <fullName>Residential Record</fullName>
            </value>
            <value>
                <fullName>Security File</fullName>
            </value>
            <value>
                <fullName>Self-Employment Record</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>