force-app/main/default/objects/DHS_Lead__c/fields/General_Record_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Record_Type_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>General Record Type Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>