force-app/main/default/objects/DHS_Lead__c/fields/Generic_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Generic_Contact_Method__c</fullName>
    <formula>IF(ISPICKVAL(Contact_Method__c,&apos;&apos;),TEXT(Contact_Method__c),
IF(ISPICKVAL(Personal_Contact_Method__c,&apos;&apos;),TEXT(Personal_Contact_Method__c),
IF(ISPICKVAL(Employment_Contact_Method__c,&apos;&apos;),TEXT(Employment_Contact_Method__c),&apos;&apos; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic Contact Method</label>
    <type>Text</type>
</CustomField>