force-app/main/default/objects/DHS_Lead__c/fields/GrammarDoubleChecked__c.field-meta.xml
<CustomField>
    <fullName>GrammarDoubleChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grammar Double Checked</label>
    <type>Checkbox</type>
</CustomField>