force-app/main/default/objects/DHS_Lead__c/fields/Header_Text2__c.field-meta.xml
<CustomField>
    <fullName>Header_Text2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Header Text2</label>
    <type>TextArea</type>
</CustomField>