force-app/main/default/objects/DHS_Lead__c/fields/Held_Foreign_Passport__c.field-meta.xml
<CustomField>
    <fullName>Held_Foreign_Passport__c</fullName>
    <label>Held passport issued by foreign country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>