force-app/main/default/objects/DHS_Lead__c/fields/Identification_Document_Number2__c.field-meta.xml
<CustomField>
    <fullName>Identification_Document_Number2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identification Document Number2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>