force-app/main/default/objects/DHS_Lead__c/fields/Identification_Document_Number3__c.field-meta.xml
<CustomField>
    <fullName>Identification_Document_Number3__c</fullName>
    <label>Identification Document Number3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>