force-app/main/default/objects/DHS_Lead__c/fields/Identification_Expiry_Date2__c.field-meta.xml
<CustomField>
    <fullName>Identification_Expiry_Date2__c</fullName>
    <label>Identification Expiry Date2</label>
    <type>Date</type>
</CustomField>