force-app/main/default/objects/DHS_Lead__c/fields/Identification_Expiry_Date3__c.field-meta.xml
<CustomField>
    <fullName>Identification_Expiry_Date3__c</fullName>
    <label>Identification Expiry Date3</label>
    <type>Date</type>
</CustomField>