force-app/main/default/objects/DHS_Lead__c/fields/Identification_Expiry_Date4__c.field-meta.xml
<CustomField>
    <fullName>Identification_Expiry_Date4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identification Expiry Date4</label>
    <type>Date</type>
</CustomField>