force-app/main/default/objects/DHS_Lead__c/fields/Identification_Issuance_Date4__c.field-meta.xml
<CustomField>
    <fullName>Identification_Issuance_Date4__c</fullName>
    <label>Identification Issuance Date4</label>
    <type>Date</type>
</CustomField>