force-app/main/default/objects/DHS_Lead__c/fields/Identification_Type4__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type4__c</fullName>
    <label>Identification Type4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver&apos;s license</fullName>
            </value>
            <value>
                <fullName>Learner&apos;s permit</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refused to provide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>