force-app/main/default/objects/DHS_Lead__c/fields/Identification_Type_Notes4__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type_Notes4__c</fullName>
    <label>Identification Type Notes4</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>