force-app/main/default/objects/DHS_Lead__c/fields/ILLEGAL_SUBSTANCE_ACTIVITY__c.field-meta.xml
<CustomField>
    <fullName>ILLEGAL_SUBSTANCE_ACTIVITY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USE OF ILLEGAL SUBSTANCES AND ACTIVITY</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>