force-app/main/default/objects/DHS_Lead__c/fields/In_the_presence_of__c.field-meta.xml
<CustomField>
    <fullName>In_the_presence_of__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In the presence of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>