force-app/main/default/objects/DHS_Lead__c/fields/Info_Release_to_Subj_Notes__c.field-meta.xml
<CustomField>
    <fullName>Info_Release_to_Subj_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Information Release to Subject Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>