force-app/main/default/objects/DHS_Lead__c/fields/Information_Release_to_Subject__c.field-meta.xml
<CustomField>
    <fullName>Information_Release_to_Subject__c</fullName>
    <label>Information Release to Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Directly to Subject</fullName>
            </value>
            <value>
                <fullName>ONLY through another medical provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>