force-app/main/default/objects/DHS_Lead__c/fields/Interview_Address__c.field-meta.xml
<CustomField>
    <fullName>Interview_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>