force-app/main/default/objects/DHS_Lead__c/fields/Interview_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Interview_AddressLine2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>