force-app/main/default/objects/DHS_Lead__c/fields/Interview_City__c.field-meta.xml
<CustomField>
    <fullName>Interview_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>