force-app/main/default/objects/DHS_Lead__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>