force-app/main/default/objects/DHS_Lead__c/fields/Interview_Location__c.field-meta.xml
<CustomField>
    <fullName>Interview_Location__c</fullName>
    <label>Interview Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>