force-app/main/default/objects/DHS_Lead__c/fields/Interview_Mailing_Address_Diff__c.field-meta.xml
<CustomField>
    <fullName>Interview_Mailing_Address_Diff__c</fullName>
    <label>Interview Address N Mailing Address Diff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>