force-app/main/default/objects/DHS_Lead__c/fields/Interview_Name__c.field-meta.xml
<CustomField>
    <fullName>Interview_Name__c</fullName>
    <label>Interview Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>