force-app/main/default/objects/DHS_Lead__c/fields/Interview_Response__c.field-meta.xml
<CustomField>
    <fullName>Interview_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>