force-app/main/default/objects/DHS_Lead__c/fields/Interview_State__c.field-meta.xml
<CustomField>
    <fullName>Interview_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>