force-app/main/default/objects/DHS_Lead__c/fields/Interviewed_at_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interviewed_at_Notes__c</fullName>
    <label>Interviewed at Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>