force-app/main/default/objects/DHS_Lead__c/fields/Investigator_Credential_Number__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Credential_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigator Credential Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>