force-app/main/default/objects/DHS_Lead__c/fields/Investigators_Notes__c.field-meta.xml
<CustomField>
    <fullName>Investigators_Notes__c</fullName>
    <label>Investigator&apos;s Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>