force-app/main/default/objects/DHS_Lead__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Description</label>
    <length>19272</length>
    <type>LongTextArea</type>
</CustomField>