force-app/main/default/objects/DHS_Lead__c/fields/Issues_Discrep_Developed__c.field-meta.xml
<CustomField>
    <fullName>Issues_Discrep_Developed__c</fullName>
    <label>Issues, discrepancies, or developed acti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>