force-app/main/default/objects/DHS_Lead__c/fields/Item_number__c.field-meta.xml
<CustomField>
    <fullName>Item_number__c</fullName>
    <label>Item number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>