force-app/main/default/objects/DHS_Lead__c/fields/Joint_interview_with__c.field-meta.xml
<CustomField>
    <fullName>Joint_interview_with__c</fullName>
    <label>Joint interview with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>