force-app/main/default/objects/DHS_Lead__c/fields/Lead_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Contact Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>