force-app/main/default/objects/DHS_Lead__c/fields/Lead_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Name__c</fullName>
    <label>Lead Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>