force-app/main/default/objects/DHS_Lead__c/fields/Lead_Contact_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Other_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Contact Other Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>