force-app/main/default/objects/DHS_Lead__c/fields/Lead_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Contact State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>