force-app/main/default/objects/DHS_Lead__c/fields/Lead_Dates__c.field-meta.xml
<CustomField>
    <fullName>Lead_Dates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>