force-app/main/default/objects/DHS_Lead__c/fields/Lead_Log__c.field-meta.xml
<CustomField>
    <fullName>Lead_Log__c</fullName>
    <label>Lead Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>