force-app/main/default/objects/DHS_Lead__c/fields/Lead_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Org__c</fullName>
    <label>Lead Source Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>