force-app/main/default/objects/DHS_Lead__c/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <label>LeadType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject Interview (ESI/TESI)</fullName>
            </value>
            <value>
                <fullName>General (GENL)</fullName>
            </value>
            <value>
                <fullName>Employment (EMPL)</fullName>
            </value>
            <value>
                <fullName>Medical (MEDI)</fullName>
            </value>
            <value>
                <fullName>Residence (RESI)</fullName>
            </value>
            <value>
                <fullName>Education (EDUC)</fullName>
            </value>
            <value>
                <fullName>Former Spouse (FMSP)</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Subject Recontact (SUBC)</fullName>
            </value>
            <value>
                <fullName>Financial (FINL)</fullName>
            </value>
            <value>
                <fullName>Public records (PUBR)</fullName>
            </value>
            <value>
                <fullName>Law Enforcement (LAWE)</fullName>
            </value>
            <value>
                <fullName>References (REFE)</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Publicly Available Electronic Information (PAEI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>