force-app/main/default/objects/DHS_Lead__c/fields/Length_of_interview__c.field-meta.xml
<CustomField>
    <fullName>Length_of_interview__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Length of interview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>