force-app/main/default/objects/DHS_Lead__c/fields/Length_of_interview_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Length_of_interview_Minutes__c</fullName>
    <label>Length of interview Minutes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>