force-app/main/default/objects/DHS_Lead__c/fields/Mailing_Attach_with_Report__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Attach_with_Report__c</fullName>
    <label>Are you mailing attachment with report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>