force-app/main/default/objects/DHS_Lead__c/fields/Med_Release_Provided_Expl__c.field-meta.xml
<CustomField>
    <fullName>Med_Release_Provided_Expl__c</fullName>
    <label>Release Provided - Explanation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>