force-app/main/default/objects/DHS_Lead__c/fields/MEDIA_PUBLICATIONS__c.field-meta.xml
<CustomField>
    <fullName>MEDIA_PUBLICATIONS__c</fullName>
    <label>MEDIA/PUBLICATIONS</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>