force-app/main/default/objects/DHS_Lead__c/fields/MEDICAL_RECORD__c.field-meta.xml
<CustomField>
    <fullName>MEDICAL_RECORD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MEDICAL RECORD</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>