force-app/main/default/objects/DHS_Lead__c/fields/Medical_Release_Provided__c.field-meta.xml
<CustomField>
    <fullName>Medical_Release_Provided__c</fullName>
    <label>Medical Release Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF 85P Release</fullName>
            </value>
            <value>
                <fullName>SF 86 Release</fullName>
            </value>
            <value>
                <fullName>SF Release Not Used</fullName>
            </value>
            <value>
                <fullName>Specific Release</fullName>
            </value>
            <value>
                <fullName>Other Sensitive Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>