force-app/main/default/objects/DHS_Lead__c/fields/Minutes_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_completion__c</fullName>
    <label>Minutes of completion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>